force-app/main/default/objects/Z_ExpenseItem__c/fields/Expense__c.field-meta.xml
<CustomField>
    <fullName>Expense__c</fullName>
    <label>経費精算</label>
    <referenceTo>Z_Expense__c</referenceTo>
    <relationshipLabel>経費明細</relationshipLabel>
    <relationshipName>ExpenseItemR</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>