force-app/main/default/objects/Z_ExpenseItem__c/fields/Note__c.field-meta.xml
<CustomField>
    <fullName>Note__c</fullName>
    <label>備考</label>
    <type>TextArea</type>
</CustomField>