force-app/main/default/objects/Z_ExpenseItem__c/fields/Uses__c.field-meta.xml
<CustomField>
    <fullName>Uses__c</fullName>
    <label>使途</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>交通費</fullName>
            </value>
            <value>
                <fullName>タクシー代</fullName>
            </value>
            <value>
                <fullName>宿泊費</fullName>
            </value>
            <value>
                <fullName>食費</fullName>
            </value>
            <value>
                <fullName>交際費</fullName>
            </value>
            <value>
                <fullName>雑費</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>