force-app/main/default/objects/Z_ExpenseItem__c/validationRules/HotelFeeLessEqual15000.validationRule-meta.xml
<ValidationRule>
    <fullName>HotelFeeLessEqual15000</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(Uses__c, '宿泊費'), Cost__c > 15000)</errorConditionFormula>
    <errorMessage>宿泊費は、15,000円以下にしてください。</errorMessage>
</ValidationRule>